conteudo da live 23/03

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,15 @@
 	</style>
 </head>
 <body>
+	<!--div id="loading">
+		<div>
+			<div>...loading...</div>
+			<div class="progress">
+				<div id="progressbar"></div>
+			</div>
+		</div>
+	</div-->
+	<div id="root" />
 	<script src="index.js"></script>
-</body>
+	</body>
 </html>
